<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Final Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday">Date of Birth</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="title_activity_core">Messaging and Contacts</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="reply_str">Say something</string>
    <string name="Reply_btn_str">Reply</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="forgotprompt">Input Email in username field</string>
    <string name="sendNewMsg">Send New Message</string>
    <string name="edit_str">Edit</string>
    <string name="deleteAccount_str">Delete Account</string>
    <string name="title_activity_edit_settings">EditSettingsActivity</string>
    <string name="follow_str">Follow</string>
<<<<<<< HEAD
    <string name="sign_out">Sign Out</string>
    <string name="view_profile">My Profile</string>
=======
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="gallery_str">Gallery</string>
    <string name="camera_str">Camera</string>
    <string name="saveChanges_str">Save Changes</string>
    <string name="editPic_str">Change Profile Picture</string>
>>>>>>> master

</resources>
